Added and tested functions for geometry computations: projecting points onto a triangle's plane and finding closest point on a line segment to another point.

--- a/examples/fast_sweeping/CMakeLists.txt
+++ b/examples/fast_sweeping/CMakeLists.txt
@@ -107,7 +107,8 @@ list( APPEND HEADERS
 		${PARCASL}/src/simplex2.h
 		${PARCASL}/src/types.h
 		${PARCASL}/src/petsc_compatibility.h
-		${PARCASL}/src/FastSweeping.h )
+		${PARCASL}/src/FastSweeping.h
+		${PARCASL}/src/Geometry.h )
 
 list( APPEND SOURCES
 		${PARCASL}/src/parameter_list.cpp
