Reorganized class that I had previously placed in my_p4est_utils.h/cpp.  It now has its own file for a better code distribution.  Tested collecting points along the interface and their full, uniform stencils.  New class is my_p4est_nodes_along_interface.h/cpp [my_p8est_nodes_along_interface.h/cpp].  Its entries are placed in libparcasl.pri as well.

--- a/examples/fast_sweeping/CMakeLists.txt
+++ b/examples/fast_sweeping/CMakeLists.txt
@@ -174,7 +174,8 @@ if( DIMENSION MATCHES 2d )
 			${PARCASL}/src/my_p4est_two_phase_flows.h
 			${PARCASL}/src/my_p4est_xgfm_cells.h
 			${PARCASL}/src/voronoi2D.h
-			${PARCASL}/src/my_p4est_fast_sweeping.h )
+			${PARCASL}/src/my_p4est_fast_sweeping.h
+			${PARCASL}/src/my_p4est_nodes_along_interface.h )
 
 	list( APPEND SOURCES
 			${PARCASL}/src/my_p4est_biofilm.cpp
@@ -219,7 +220,8 @@ if( DIMENSION MATCHES 2d )
 			${PARCASL}/src/my_p4est_two_phase_flows.cpp
 			${PARCASL}/src/my_p4est_xgfm_cells.cpp
 			${PARCASL}/src/voronoi2D.cpp
-			${PARCASL}/src/my_p4est_fast_sweeping.cpp )
+			${PARCASL}/src/my_p4est_fast_sweeping.cpp
+			${PARCASL}/src/my_p4est_nodes_along_interface.cpp )
 
 	# headers-only stuff
 	list( APPEND HEADERS
@@ -273,7 +275,8 @@ if( DIMENSION MATCHES 3d )
 			${PARCASL}/src/my_p8est_two_phase_flows.h
 			${PARCASL}/src/my_p8est_xgfm_cells.h
 			${PARCASL}/src/voronoi3D.h
-			${PARCASL}/src/my_p8est_fast_sweeping.h )
+			${PARCASL}/src/my_p8est_fast_sweeping.h
+			${PARCASL}/src/my_p8est_nodes_along_interface.h )
 
 	list( APPEND SOURCES
 			${PARCASL}/src/my_p8est_biofilm.cpp
@@ -318,7 +321,8 @@ if( DIMENSION MATCHES 3d )
 			${PARCASL}/src/my_p8est_two_phase_flows.cpp
 			${PARCASL}/src/my_p8est_xgfm_cells.cpp
 			${PARCASL}/src/voronoi3D.cpp
-			${PARCASL}/src/my_p8est_fast_sweeping.cpp )
+			${PARCASL}/src/my_p8est_fast_sweeping.cpp
+			${PARCASL}/src/my_p8est_nodes_along_interface.cpp )
 
 	# Headers-only stuff.
 	list( APPEND HEADERS
