Circular data sets are now correlated: the nth sample in the sdf is the signed-distance-function version of the nth sample in the rls.  This can be useful for building a de-noising auto-encoder.

--- a/examples/fast_sweeping/CMakeLists.txt
+++ b/examples/fast_sweeping/CMakeLists.txt
@@ -8,7 +8,7 @@ set( CMAKE_CXX_STANDARD 11 )
 ######################## Source code ########################
 
 if( DIMENSION MATCHES 2d )
-	list( APPEND SRC star_datasets_2d.cpp star_theta_root_finding.h)
+	list( APPEND SRC sphere_datasets_2d.cpp )
 endif()
 
 #if( DIMENSION MATCHES 3d )
