Work in progress:  Now using intervals for finding the roots of the derivative of the sine wave level-set function.  It still takes, in some cases with higher curvature, to several million iterations to get a value of derivative < 1e-8.  This is caused by using the initial guess as the one predicted by the gradient in the caller.  Still need to replace Newton-Raphson's method if there is no good initial guess.

--- a/examples/fast_sweeping/CMakeLists.txt
+++ b/examples/fast_sweeping/CMakeLists.txt
@@ -8,7 +8,7 @@ set( CMAKE_CXX_STANDARD 11 )
 ######################## Source code ########################
 
 if( DIMENSION MATCHES 2d )
-	list( APPEND SRC sphere_datasets_2d.cpp )
+	list( APPEND SRC sinewave_levelset_test_2d.cpp arclength_parameterized_sine_2d.h )
 endif()
 
 #if( DIMENSION MATCHES 3d )
