Added source file to generate an updated version of the old ML_Datasets adaptive flower data sets.  Also, I fixed a bug for flower data sets: if the attempted distance is less than EPS, then no further numerical root finder is needed because the nodal distance to the interface is good enough (~0).  Grouped the updated sources for ML_Datasets into the old_mlds/ to maintain a better organization.

--- a/examples/fast_sweeping/CMakeLists.txt
+++ b/examples/fast_sweeping/CMakeLists.txt
@@ -8,7 +8,7 @@ set( CMAKE_CXX_STANDARD 11 )
 ######################## Source code ########################
 
 if( DIMENSION MATCHES 2d )
-	list( APPEND SRC old_mlds_flowerDatasets.cpp )
+	list( APPEND SRC old_mlds/old_mlds_adaptiveFlowerDatasets.cpp)
 endif()
 
 #if( DIMENSION MATCHES 3d )
