--- a/examples/fast_sweeping/CMakeLists.txt
+++ b/examples/fast_sweeping/CMakeLists.txt
@@ -8,7 +8,7 @@ set( CMAKE_CXX_STANDARD 11 )
 ######################## Source code ########################
 
 if( DIMENSION MATCHES 2d )
-	list( APPEND SRC old_mlds/old_mlds_circleDatasets.cpp )
+	list( APPEND SRC sphere_datasets_2d.cpp )
 endif()
 
 #if( DIMENSION MATCHES 3d )
