Building a validation testing class for two-phase flow solvers

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.pro.user*
 *.creator.user*
 *examples/**/*.pri
+!examples/two_phase_flows_validation/two_phase_flows_validation.pri
 CMakeLists.txt.user
 *~
 *.vt[uks]
