Switched to macOS Mojave and installed mpich.  CMake fails if I use find_package(MPI REQUIRED) because I didn't install Fortran.  Commenting out that line in CMakeLists.txt.

--- a/examples/ml_mass_conservation/CMakeLists.txt
+++ b/examples/ml_mass_conservation/CMakeLists.txt
@@ -29,7 +29,7 @@ set( CMAKE_CXX_COMPILER mpicxx )
 ######################## Libraries ########################
 # These commands must be given prior to defining any target.
 
-find_package( MPI REQUIRED )
+# find_package( MPI REQUIRED )		# Not needed if using mpich rather than openmpi.
 find_package( Boost COMPONENTS filesystem REQUIRED )
 
 # Library linking directories.
