Work in progress: Refactored code to generate mass conservation data sets for network training to a separate folder: data_sets.  Modified slml namespace by adding advection that interleaves numerical with semi-Lagrangian error-correction networks.  The latter still needs to be tested.  Fixed a couple of warnings in my functions at my_p4est_semi_lagrangian.cpp.

--- a/examples/ml_mass_conservation/CMakeLists.txt
+++ b/examples/ml_mass_conservation/CMakeLists.txt
@@ -8,7 +8,7 @@ set( CMAKE_CXX_STANDARD 11 )
 ######################## Source code ########################
 
 if( DIMENSION MATCHES 2d )
-	list( APPEND SRC main_2d.cpp )
+	list( APPEND SRC data_sets/generate_data_sets_2d.cpp)
 endif()
 
 #if( DIMENSION MATCHES 3d )
