Created a NeuralNetwork class inside slml namespace.  Tested predictions with and without OpenMP.  Predictions work, including the pre and postprocessing stages.  Results match very closely with Tensorflow+Keras in python when I use double precision with frugally deep.  Trained neural network is based on floats, not doubles.

--- a/examples/ml_mass_conservation/CMakeLists.txt
+++ b/examples/ml_mass_conservation/CMakeLists.txt
@@ -16,7 +16,7 @@ endif()
 #endif()
 #add_compile_definitions( PRIVATE P4_TO_P8 )
 add_compile_definitions( PRIVATE CASL_THROWS )
-add_compile_definitions( PRIVATE FDEEP_FLOAT_TYPE=float )		# Frugally deep floating-point precision.
+add_compile_definitions( PRIVATE FDEEP_FLOAT_TYPE=double )		# Frugally deep floating-point precision.
 
 ######################## Settings ########################
 
