--- a/examples/ml_mass_conservation/CMakeLists.txt
+++ b/examples/ml_mass_conservation/CMakeLists.txt
@@ -8,7 +8,7 @@ set( CMAKE_CXX_STANDARD 14 )
 ######################## Source code ########################
 
 if( DIMENSION MATCHES 2d )
-	list( APPEND SRC stefan_2d.cpp )
+	list( APPEND SRC data_sets/generate_data_sets_2d.cpp )
 endif()
 
 #if( DIMENSION MATCHES 3d )
