Began working on 3d curvature.  Implemented and tested balltree for fast knn queries (for k = 1).  To be used to compute/approximate signed distance to 2d manifolds embedded in 3d (like sinusoidal waves).

--- a/examples/ml_curvature/CMakeLists.txt
+++ b/examples/ml_curvature/CMakeLists.txt
@@ -8,7 +8,7 @@ set( CMAKE_CXX_STANDARD 14 )
 ######################## Source code ########################
 
 if( DIMENSION MATCHES 2d )
-	list( APPEND SRC main_2d.cpp )
+	list( APPEND SRC triangulation_distance_test.cpp )
 endif()
 
 #if( DIMENSION MATCHES 3d )
