Added debug and release modes to CMakeLists.txt.
Installed p4est and PETSc in debug mode as I had been running the examples in release mode.

--- a/examples/ml_curvature/CMakeLists.txt
+++ b/examples/ml_curvature/CMakeLists.txt
@@ -5,7 +5,8 @@ project( ml_curvature )
 
 set( CMAKE_CXX_STANDARD 14 )
 
-######################## Source code ########################
+
+######################## Compiler custom macros ########################
 
 if( DIMENSION MATCHES 2d )
 	list( APPEND SRC main_2d.cpp )
@@ -14,12 +15,34 @@ elseif( DIMENSION MATCHES 3d )
 else()
 	message( FATAL_ERROR "Invalid or missing DIMENSION macro --it should be '2d' or '3d'." )
 endif()
-#add_compile_definitions( PRIVATE P4_TO_P8 )
+
 add_compile_definitions( PRIVATE CASL_THROWS )
 add_compile_definitions( PRIVATE FDEEP_FLOAT_TYPE=float )		# Frugally deep floating-point precision.
 add_compile_definitions( PRIVATE EIGEN_DONT_PARALLELIZE )		# Prevents parallelization in Eigen library.
 
-######################## Settings ########################
+
+######################## Execution mode ########################
+
+# Checking mode: Created by visiting CLion | Preferences | Build, Execution, Deployment | CMake
+# Based on https://intellij-support.jetbrains.com/hc/en-us/community/posts/360000919039-Clion-how-to-build-cmake-to-support-debug-release
+message( "" )
+if( CMAKE_BUILD_TYPE MATCHES Debug )
+	message( "******* CASL CMAKE IN DEBUG MODE *******" )
+	set( PETSC_DIR /usr/local/petsc-3.12.0-debug )	# PETSc directory for debug mode.
+	set( P4EST_DIR /usr/local/p4est-2.2-debug )		# p4est directory for debug mode.
+
+	add_compile_definitions( PRIVATE DEBUG )		# Enable debug macro.
+elseif( CMAKE_BUILD_TYPE MATCHES Release )
+	message( "******* CASL CMAKE IN RELEASE MODE *******" )
+	set( PETSC_DIR /usr/local/petsc )				# PETSc directory for release mode.
+	set( P4EST_DIR /usr/local/p4est-2.2 )			# p4est directory for release mode.
+endif()
+message( "** Loading PETSc from: " ${PETSC_DIR} )
+message( "** Loading p4est from: " ${P4EST_DIR} )
+message( "" )
+
+
+######################## Compiler custom flags and settings ########################
 
 # CASL library root directory.
 set( PARCASL ${CMAKE_CURRENT_SOURCE_DIR}/../../ )
@@ -33,7 +56,8 @@ set( CMAKE_CXX_COMPILER mpicxx )
 #set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 #set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 
-######################## Libraries ########################
+
+######################## Loading libraries ########################
 # These commands must be given prior to defining any target.
 
 # OpenMP flags.
@@ -53,8 +77,8 @@ find_package( Boost COMPONENTS filesystem REQUIRED )
 # Library linking directories.
 link_directories(
 		/usr/local/lib
-		/usr/local/petsc/lib
-		/usr/local/p4est-2.2/lib
+		${PETSC_DIR}/lib
+		${P4EST_DIR}/lib
 		/usr/local/opt/libomp/lib
 		/usr/local/OpenBlas/lib )
 
@@ -74,12 +98,12 @@ include_directories(
 		.
 		${PARCASL}
 		/usr/local/include
-		/usr/local/petsc/include
-		/usr/local/p4est-2.2/include
-		/usr/local/include/voro++
+		${PETSC_DIR}/include
+		${P4EST_DIR}/include
 		/usr/local/opt/libomp/include
 		/usr/local/OpenBlas/include
 		${Boost_INCLUDE_DIR} )
+
 
 ######################## Creating the executable ########################
 
