Added understanding_main_3d.cpp and updated CMakeLists.txt.
To enable CLion's detection of P4_TO_P8, I must disable the 2d profile with the current settings.

--- a/examples/shs_channel_flow/CMakeLists.txt
+++ b/examples/shs_channel_flow/CMakeLists.txt
@@ -10,7 +10,7 @@ set( CMAKE_CXX_STANDARD 14 )
 if( DIMENSION MATCHES 2d )
 	list( APPEND SRC understanding_main_2d.cpp )
 elseif( DIMENSION MATCHES 3d )
-	list( APPEND SRC main_3d.cpp )
+	list( APPEND SRC understanding_main_3d.cpp )
 else()
 	message( FATAL_ERROR "Invalid or missing DIMENSION macro --it should be '2d' or '3d'." )
 endif()
@@ -46,5 +46,4 @@ include_directories( . ${PARCASL} ${INC_DIRS} )
 
 include( ${PARCASL}/cmake/libparcasl.cmake )
 
-add_executable( shs_channel_flow
-		${SRC} ${HEADERS} ${SOURCES} )
+add_executable( shs_channel_flow ${SRC} ${SOURCES} )	# Turns out we don't need the headers.
