--- a/examples/ml_curvature/CMakeLists.txt
+++ b/examples/ml_curvature/CMakeLists.txt
@@ -22,18 +22,24 @@ add_compile_definitions( PRIVATE EIGEN_DONT_PARALLELIZE )		# Prevents paralleliz
 ############################# Load paths to libraries and set compiler for current system ##############################
 
 set( PARCASL ${CMAKE_CURRENT_SOURCE_DIR}/../../ )				# CASL library root directory.
-include( ${PARCASL}/cmake/zea.cmake )							# Set paths for this machine and populate LIBS, INC_DIRS, and LIB_DIRS lists.
+
+if( DEFINED ENV{CASL_CMAKE_PROFILE} )							# Set paths for this machine and populate LIBS, INC_DIRS,
+	include( ${PARCASL}/cmake/$ENV{CASL_CMAKE_PROFILE} )		# and LIB_DIRS lists.  You must create the environment
+else()															# variable CASL_CMAKE_PROFILE.
+	message( FATAL_ERROR "Environment variable CASL_CMAKE_PROFILE is not set!" )
+endif()
 
 if( CMAKE_BUILD_TYPE MATCHES Debug )
 	add_compile_definitions( PRIVATE DEBUG )					# Enable debug macro.
 endif()
 
 ############################################# Compiler optimization flags ##############################################
-# Comment these out when using debugger.
 
-#set( GCC_COVERAGE_COMPILE_FLAGS "-O2 -O3 -march=native" )
-#set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
-#set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+if( CMAKE_BUILD_TYPE MATCHES Release )
+	set( GCC_COVERAGE_COMPILE_FLAGS "-O2 -O3 -march=native" )
+	set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+endif()
 
 ################################################## Loading libraries ###################################################
 # These commands must be given prior to defining any target.
@@ -44,22 +50,20 @@ find_package( OpenMP )
 if( OPENMP_FOUND )
 	set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}" )
 	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
+	list( APPEND LIB_DIRS /usr/local/opt/libomp/lib )
+	list( APPEND LIBS omp )
+	list( APPEND INC_DIRS /usr/local/opt/libomp/include )
 endif()
 
-# Libraries and their linking/include directories (see cmake/<machine>.cmake).  Also adding OpenMP.
-link_directories(
-		${LIB_DIRS}
-		/usr/local/opt/libomp/lib )
+# Libraries and their linking/include directories (see cmake/<machine>.cmake).  Also adding OpenMP from above.
+link_directories( ${LIB_DIRS} )
 
-link_libraries(
-		${LIBS}
-		omp )
+link_libraries( ${LIBS} )
 
 include_directories(
 		.
 		${PARCASL}
-		${INC_DIRS}
-		/usr/local/opt/libomp/include )
+		${INC_DIRS} )
 
 ############################################### Creating the executable ################################################
 
