Now loading OpenMP dynamically in the cmake profile.
Instead of hard-coding the path to libs and include dirs, non pulling the values in CMake variables for OpenMP.  Tested on txt machine too.

--- a/examples/ml_curvature/CMakeLists.txt
+++ b/examples/ml_curvature/CMakeLists.txt
@@ -10,7 +10,7 @@ set( CMAKE_CXX_STANDARD 14 )
 if( DIMENSION MATCHES 2d )
 	list( APPEND SRC main_2d.cpp )
 elseif( DIMENSION MATCHES 3d )
-	list( APPEND SRC data_sets/gaussian_dataset_3d.cpp )
+	list( APPEND SRC data_sets/gaussian_test_3d.cpp )
 else()
 	message( FATAL_ERROR "Invalid or missing DIMENSION macro --it should be '2d' or '3d'." )
 endif()
@@ -50,9 +50,8 @@ find_package( OpenMP )
 if( OPENMP_FOUND )
 	set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}" )
 	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
-	list( APPEND LIB_DIRS /usr/local/opt/libomp/lib )
-	list( APPEND LIBS omp )
-	list( APPEND INC_DIRS /usr/local/opt/libomp/include )
+	list( APPEND LIBS ${OpenMP_C_LIBRARIES} ${OpenMP_CXX_LIBRARIES} )
+	list( APPEND INC_DIRS ${OpenMP_C_INCLUDE_DIRS} ${OpenMP_CXX_INCLUDE_DIRS} )
 endif()
 
 # Libraries and their linking/include directories (see cmake/<machine>.cmake).  Also adding OpenMP from above.
